Modernize codebase. expr.axis package.